# Tantrums

./: .gitignore  CMakeLists.txt  EXTENSION.txt  README.md  REFERENCE.txt  TANTRUMS_PLAN.txt  main.42AHH  test_script.trinitrotoluene
cmake/: embed_binary.cmake
documentation/: README.txt  control_flow.txt  functions.txt  getting_started.txt  index.html  memory_and_errors.txt  variables_and_types.txt
documentation/css/: style.css
documentation/js/: main.js  sidebar.js
documentation/pages/: building.html  builtins.html  control-flow.html  error-handling.html  escape-analysis.html  examples.html  functions.html  imports.html  leak-detection.html  memory.html  operators.html  performance.html  pipeline.html  pointers.html  profiling.html  quickstart.html  roadmap.html  syntax.html  types.html
include/: LLVMCodegen.h  ast.h  builtins.h  bytecode_file.h  chunk.h  common.h  compiler.h  lexer.h  memory.h  parser.h  runtime.h  table.h  token.h  value.h  vm.h
include/stdlib/: filesystem.h  maths.h
src/: LLVMCodegen.cpp  ast.cpp  builtins.cpp  bytecode_file.cpp  chunk.cpp  compiler.cpp  lexer.cpp  main.cpp  memory.cpp  parser.cpp  runtime.cpp  table.cpp  token.cpp  value.cpp  vm.cpp
src/stdlib/: filesystem.cpp  maths.cpp
tantrums-vscode/: CHANGELOG.md  LICENSE  README.md  extension.js  file-icon-theme.json  language-configuration.json  package.json
tantrums-vscode/snippets/: tantrums.json
tantrums-vscode/syntaxes/: tantrums.tmLanguage.json
